# quantum-enablement

./: .cz.toml  CITATION.bib  DEPRECATION.md  FILEMAP.md  INSTALL.md  README.md  pyproject.toml  pytest.ini  tox.ini
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: review.yaml
docs/: Calculating ground states on large scale systems with the quantum krylov subspace method.ipynb  krylov-subspace-demo.ipynb  pulse_efficient_transpilation_qsim.ipynb  qubit_mapping_guide.ipynb  reference_guide.md
docs/Notebooks/: partial_folding.ipynb  wire_cutting_how_to_guide.ipynb
docs/challenges/: dynamical_decoupling.ipynb  measurement_twirling.ipynb  spam.ipynb  zne.ipynb
docs/challenges/automation/zne/: automated_zne_challenge1.py  automated_zne_challenge2.py  automated_zne_challenge3a.py  automated_zne_challenge3b.py  circuit.py
docs/notebooks/: Calculating ground states on large scale systems with the quantum krylov subspace method.ipynb  QNN_tutorial.ipynb  QNN_tutorial_gradients_share.ipynb  QNN_tutorial_optimizers_comparison.ipynb  QNN_tutorial_with_gradients.ipynb  TN_circuit.py  TN_circuit_example.ipynb  building_and_optimizing_qaoa_circuits_with_qiskit_patterns.ipynb  circuits.py  cvar-cost-function-utility.ipynb  cvar-cost-function.ipynb  docplex_cutter.lp  how_to_build_and_optimize_qaoa_using_swap_strategy.ipynb  intra_device.ipynb  intro_to_qiskit_with_primitivesV2.ipynb  krylov.ipynb  krylov_noisy.ipynb  krylov_quantum_diagonalization.ipynb  krylov_utility.ipynb  krylov_utility_1p.ipynb  krylov_utility_1p_bare.ipynb  krylov_utility_1p_short.ipynb  lo.ipynb  partial_folding.ipynb  pea-resource-estimate.ipynb  primitives.ipynb  pulse-efficient-transpilation.ipynb  pulse_efficient_transpilation_qsim.ipynb  qaoa-transpiler.ipynb  qaoa.ipynb  qubit_mapping.ipynb  readout-error-mitigation.ipynb  resampling.ipynb  scaling  twirling.ipynb  utils_k_particle.py  wire_cutting(FATAL_NOT_WORKING).ipynb  wire_cutting.ipynb
docs/notebooks/data/ibm_montecarlo_8q_05102024_130247/: H_imag_results_evs.npy  H_real_results_evs.npy  H_real_results_metadata.npy  S_imag_results_evs.npy  S_real_results_evs.npy  experiment_parameters.pickle
docs/notebooks/data/ibm_pinguino1_20q_05042024_101604/: H_imag_results_evs.npy  H_imag_results_metadata.npy  H_real_results_evs.npy  S_imag_results_evs.npy  S_real_results_evs.npy  experiment_parameters.pickle
docs/notebooks/hardware_inspired_cutting/: benchmark_hardware.ipynb  benchmark_punctured_coupling_map_2024-08-21_calibration_data.pkl  benchmark_punctured_coupling_map_2024-08-22_calibration_data.pkl
docs/notebooks/krylov_tensor_network/: TN_circuit.py  TN_circuit_example.ipynb  krylov_TN_demo.ipynb  krylov_trotter_circuits.py  krylov_utility_TN.ipynb  krylov_utility_TN_short.ipynb  lattice_afi.py  utils_single_particle.py
docs/notebooks/krylov_tensor_network/krylov_ED/: ED_Kylov_trotter.py
docs/notebooks/longrangecnot/: LongRangeCNOTgates-old.ipynb  LongRangeCNOTgates.ipynb  experiment_parameters.pickle
docs/notebooks/longrangecnot/data/: experiment_parameters.pickle  oplevel_1_0_3_ibm_pinguino1_cnot_uni_avg_gate_fidelities.pkl  oplevel_1_0_63_ibm_sherbrooke_cnot_uni_avg_gate_fidelities.pkl  oplevel_1_0_63_ibm_sherbrooke_cnot_uni_avg_gate_fidelities_std.pkl  oplevel_1_dd_0_3_ibm_pinguino1_cnot_dyn_avg_gate_fidelities.pkl  oplevel_1_dd_0_3_ibm_pinguino1_cnot_dyn_avg_gate_fidelities_std.pkl  oplevel_1_dd_0_3_ibm_pinguino1_cnot_postproc_avg_gate_fidelities_std.pkl  (+4 more)
docs/notebooks/scaling/: 12x12_2024-02-16T18:40:14.035219+00:00.json  12x12_2024-03-08T21:59:48.334965+00:00.json  12x12_2024-03-12T21.json  ibm_sherbrooke_32x32_2024-04-03T18.42.02.800923+00.00.json  requirements.txt
docs/notebooks/scaling-estimator/: ibm_pinguino1_48x20_2024-04-09T03.40.47.636630+00.00.json  ibm_sherbrooke_32x32_2024-04-04T16.17.17.355688+00.00.json  requirements.txt  scaling-estimator.ipynb
docs/notebooks/scaling-sampler/: scaling.ipynb
docs/transpilation/: Configuring the Pass Manager.ipynb  Custom backend definition.ipynb  Transpilation Course Outline.md
docs/tutorials/: QNN_tutorial.ipynb  adapt-vqe.ipynb
pyproject_qiskit/: __init__.py
pyproject_qiskit/utils/: __init__.py
quantum_enablement/: __init__.py  resampling.py
quantum_enablement/circuits/: __init__.py  _mbl.py  _misc.py  _qaoa.py  _random.py  _utils.py
quantum_enablement/mitigation/: __init__.py  _twirl.py  _twirling.py
quantum_enablement/resampling/: __init__.py  _bootstrap.py  bootstrap.py  typing.py
quantum_enablement/tutorials/: QNN_tutorial.ipynb  adapt-vqe-draft-H2.ipynb  adapt-vqe-draft-H2_compare.ipynb  adapt-vqe-draft-LiH.ipynb  adapt-vqe-draft-LiH_compare.ipynb  adapt-vqe-draft.ipynb  adapt-vqe-patterns.ipynb  adapt-vqe.ipynb
quantum_enablement/utils/: __init__.py
quantum_enablement/zne/noise_amplification/: noise_amplifiers.py
test/: __init__.py
test/acceptance/: __init__.py
test/integration/: __init__.py
test/system/: __init__.py
test/unit/: __init__.py
test/unit/circuits/: __init__.py  test_mbl.py  test_qaoa.py  test_utils.py
test/unit/mitigation/: __init__.py  test_twirling.py
test/unit/zne/: test_noise_amplifiers.py  test_noise_amplifiers_simple_1.py  test_noise_amplifiers_simple_2.py  test_noise_amplifiers_simple_3.py  test_noise_amplifiers_simple_4.py  test_noise_amplifiers_simple_5.py
(+1 files in other folders)
